+ agglomerateByRank: make rownames unique by default
+ removed calculateDistance and calculateUniFrac alias
+ calculateUnifrac bugfix

Changes in version 1.7.x
+ Deprecated assay_name arguments, replaced with assay.type
+ Removed abund_values argument
+ makePhyloseqFromTreeSE: added option for choosing a tree from multiple rowTrees
+ mergeSEs: match rows based on all available taxonomy level data on rowData
+ mergeSEs: fix bug related to equally named variables that are different class
+ mergeSEs: option for merging multiple assays
+ calculateUnifrac: option for specifying the tree from TreeSE
+ transformAssay: utilize vegan package
+ calculateUnifrac: subset tree based on data
+ agglomerateByRank: take into account multiple trees
+ loadFromBiom: name columns of rowData based on prefixes
+ Deprecate transformSamples, *Features, relabundance, ZTransform, relAbundanceCounts
+ mergeSEs: faster tree merging
+ Faith's index: fix bug that occurred when only one taxon is present

Changes in version 1.9.x
+ loadFromMetaphlan: Bugfix, not all files include ID column.
+ cluster: added wrapper for bluster's clusterRows function
+ Added loadFromHumann
+ calculateDMM: deprecated/updated outdated functions
+ Added Tengeler2020 dataset
+ *RDA & *CCA: calculate also statistical significance
+ altExp support for meltAssay
+ Deprecate mergeRows, mergeCols, agglomerateByRank, agglomerateByPrevalence
+ Removed  getAbundanceSample and getAbundanceFeature  
+ Updated test to avoid warning from deprecated functions 
+ Export mergeFeaturesByRank
+ *RDA & *CCA: scores parameter for specifying output
+ Improve mergeSEs and loadFromBiom
+ Faith index: bugfix
+ runRDA bugfix: vegan::dbrda and vegan::vegdist have different parameter for dissimilarity --> taken into account
+ Add support for Metaphlan v2
+ loadFromHumann: Improved speed

Changes in version 1.11.x
+ loadFromMetaphlan: support strain rank
+ agglomerateByRank: agglomerate tree fix
+ splitOn: update rowTree fix