@@ -16,6 +16,9 @@ perSampleDominantFeatures(
   assay.type = assay_name,
   assay_name = "counts",
   rank = NULL,
+  other.name = "Other",
+  n = NULL,
+  complete = TRUE,
   ...
 )
 
@@ -24,6 +27,9 @@ perSampleDominantFeatures(
   assay.type = assay_name,
   assay_name = "counts",
   rank = NULL,
+  other.name = "Other",
+  n = NULL,
+  complete = TRUE,
   ...
 )
 
@@ -31,9 +37,22 @@ perSampleDominantTaxa(x, ...)
 
 \S4method{perSampleDominantTaxa}{SummarizedExperiment}(x, ...)
 
-addPerSampleDominantFeatures(x, name = "dominant_taxa", ...)
+addPerSampleDominantFeatures(
+  x,
+  name = "dominant_taxa",
+  other.name = "Other",
+  n = NULL,
+  ...
+)
 
-\S4method{addPerSampleDominantFeatures}{SummarizedExperiment}(x, name = "dominant_taxa", ...)
+\S4method{addPerSampleDominantFeatures}{SummarizedExperiment}(
+  x,
+  name = "dominant_taxa",
+  other.name = "Other",
+  n = NULL,
+  complete = FALSE,
+  ...
+)
 
 addPerSampleDominantTaxa(x, ...)
 
@@ -55,6 +74,20 @@ will be disabled.)}
 
 \item{rank}{A single character defining a taxonomic rank. Must be a value of
 the output of \code{taxonomyRanks()}.}
+
+\item{other.name}{A name for features that are not included in n the most frequent
+dominant features in the data. Default is "Other".}
+
+\item{n}{The number of features that are the most frequent dominant features.
+Default is NULL, which defaults that each sample is assigned a dominant taxon.}
+
+\item{complete}{A boolean value to manage multiple dominant taxa for a sample.
+Default for perSampleDominantTaxa is TRUE to include all equally dominant taxa
+for each sample. complete = FALSE samples one taxa for the samples that have
+multiple.
+Default for addPerSampleDominantTaxa is FALSE to add a column with only one
+dominant taxon assigned for each sample into colData. complete = TRUE adds a
+list that includes all dominant taxa for each sample into colData.}
 
 \item{...}{Additional arguments passed on to \code{agglomerateByRank()} when
 \code{rank} is specified.}
