@@ -98,3 +98,4 @@ Changes in version 1.11.x
 + loadFromMetaphlan: support strain rank
 + agglomerateByRank: agglomerate tree fix
 + splitOn: update rowTree fix
++ perSampleDominantFeatures: add new arguments (n, other.name, complete)
